default/objects/Tools_Assignment__c/Tools_Assignment__c.object-meta.xml
<CustomObject>
    <label>Tools Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Tools Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tools Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>