default/objects/Tools_Assignment__c/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tools</label>
    <referenceTo>Tools__c</referenceTo>
    <relationshipLabel>Tools Assignments</relationshipLabel>
    <relationshipName>Tools_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>