default/objects/Tools_Assignment__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Tools Assignments</relationshipLabel>
    <relationshipName>Tools_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>