default/objects/Tools_Assignment__c/validationRules/Prevent_Decimal_Value_On_Quantity_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Decimal_Value_On_Quantity_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(REGEX(TEXT( Quantity__c ), &quot;^\\d+$&quot;)),
NOT( Quantity__c &lt;= 0))</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Decimal value is not allowed in quantity field, Please provide whole number.</errorMessage>
</ValidationRule>