default/objects/Tools_Assignment__c/validationRules/Prevent_negative_value_in_available_qty.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_negative_value_in_available_qty</fullName>
    <active>true</active>
    <errorConditionFormula>Tools__r.Available_to_use__c &lt; 0</errorConditionFormula>
    <errorMessage>Negative value is not allowed in available to use quantity field, Please enter positive number.</errorMessage>
</ValidationRule>