default/objects/Tools_Assignment__c/validationRules/Prevent_Negative_Value_In_Quantity_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_Value_In_Quantity_Field</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Negative value is not allowed in quantity field, Please enter positive number.</errorMessage>
</ValidationRule>